added login logic for admin/user

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.1.*"
+        "laravel/framework": "5.1.*",
+        "laravelcollective/html": "5.1.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -21,7 +22,10 @@
         ],
         "psr-4": {
             "QuizSystem\\": "app/"
-        }
+        },
+        "files": [
+            "app/Helpers/Functions.php"
+        ]
     },
     "autoload-dev": {
         "classmap": [
