--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "jquery": "^3.1.0",
     "laravel-elixir": "^6.0.0-9",
     "laravel-elixir-webpack-official": "^1.0.2",
+    "lodash": "^4.15.0",
     "react": "^15.1.0",
     "react-bootstrap": "^0.29.4",
     "react-dom": "^15.1.0",
@@ -18,7 +19,6 @@
     "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
-    "gulp": "^3.9.1",
     "babel-core": "^6.9.1",
     "babel-loader": "^6.2.4",
     "babel-plugin-react-transform": "^2.0.2",
@@ -26,11 +26,15 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "css-loader": "^0.23.1",
+    "eslint": "^3.4.0",
+    "eslint-plugin-react": "^6.2.0",
     "exports-loader": "^0.6.3",
     "file-loader": "^0.8.5",
+    "gulp": "^3.9.1",
     "imports-loader": "^0.6.5",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
+    "marked": "^0.3.6",
     "react-hot-loader": "^1.3.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
