--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
-        "laravelcollective/html": "5.1.*"
+        "laravelcollective/html": "5.1.*",
+        "andrefigueira/blog-article-faker": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
