--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-redux": "^4.0.5",
     "react-syntax-highlighter": "^2.1.0",
     "redux": "^3.0.5",
+    "redux-form": "^6.0.2",
     "redux-thunk": "^2.1.0",
     "whatwg-fetch": "^1.0.0"
   },
